# gnome-settings-daemon

./: .gitignore  .gitlab-ci.yml  .gitmodules  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  acinclude.m4  autogen.sh  configure.ac  gnome-settings-daemon.doap  meson.build  meson_options.txt  meson_post_install.py
data/: 0001-media-keys-Remove-unused-allowed-keys-entry.patch  50-accessibility.xml.in  Makefile.am  apps_gnome_settings_daemon_default_editor.schemas.in  apps_gnome_settings_daemon_housekeeping.schemas.in  apps_gnome_settings_daemon_keybindings.schemas.in  apps_gnome_settings_daemon_xrandr.schemas.in  desktop_gnome_font_rendering.schemas.in  desktop_gnome_keybindings.schemas.in  desktop_gnome_peripherals_smartcard.schemas.in  desktop_gnome_peripherals_touchpad.schemas.in  gnome-settings-daemon-gdm-wayland.target  gnome-settings-daemon-gdm-x11.target  gnome-settings-daemon-gdm.target  gnome-settings-daemon-uninstalled.pc.in  gnome-settings-daemon-wayland.target  gnome-settings-daemon-x11.target  gnome-settings-daemon.1  gnome-settings-daemon.convert  gnome-settings-daemon.desktop.in.in  gnome-settings-daemon.pc.in  gnome-settings-daemon.schemas.in  gnome-settings-daemon.target  gsd-enums.h  gsd-launched-override.scope.conf  meson.build  org.gnome.SettingsDaemon.service.in  org.gnome.desktop.font-rendering.gschema.xml.in.in  org.gnome.desktop.keybindings.gschema.xml.in.in  org.gnome.desktop.peripherals.gschema.xml.in.in  org.gnome.settings-daemon.global-shortcuts.gschema.xml.in  org.gnome.settings-daemon.peripherals.gschema.xml.in  org.gnome.settings-daemon.peripherals.gschema.xml.in.in  org.gnome.settings-daemon.peripherals.wacom.gschema.xml.in  org.gnome.settings-daemon.peripherals.wacom.gschema.xml.in.in  org.gnome.settings-daemon.plugins.account.gschema.xml.in  org.gnome.settings-daemon.plugins.color-scheme.gschema.xml.in  org.gnome.settings-daemon.plugins.color.gschema.xml.in  org.gnome.settings-daemon.plugins.color.gschema.xml.in.in  org.gnome.settings-daemon.plugins.datetime.gschema.xml.in.in  (+20 more)
gnome-settings-daemon/: Makefile.am  codegen.py  gnome-settings-bus.c  gnome-settings-bus.h  gnome-settings-daemon-localeexec.in  gnome-settings-manager.c  gnome-settings-manager.h  gnome-settings-manager.xml  gnome-settings-plugin-info.c  gnome-settings-plugin-info.h  gnome-settings-plugin.c  gnome-settings-plugin.h  gnome-settings-plugins-engine.c  gnome-settings-plugins-engine.h  gnome-settings-session.c  gnome-settings-session.h  gnome-settings-systemd.c  gnome-settings-systemd.h  main.c  meson.build  org.gnome.ScreenSaver.xml  org.gnome.SessionManager.xml  org.gnome.Shell.OSD.xml  org.gnome.Shell.xml
plugins/: Makefile.am  gsd.service.in  gsd.target.in  meson.build  org.gnome.SettingsDaemon.Dummy.desktop.in  org.gnome.SettingsDaemon.Real.desktop.in
plugins/a11y-keyboard/: Makefile.am  a11y-keyboard.gnome-settings-plugin.in  gsd-a11y-keyboard-manager.c  gsd-a11y-keyboard-manager.h  gsd-a11y-keyboard-plugin.c  gsd-a11y-keyboard.service.in  gsd-a11y-preferences-dialog.c  gsd-a11y-preferences-dialog.glade  main.c  org.gnome.SettingsDaemon.A11yKeyboard.desktop.in  test-a11y-preferences-dialog.c
plugins/a11y-settings/: Makefile.am  a11y-settings.gnome-settings-plugin.in  gsd-a11y-settings-manager.c  gsd-a11y-settings-manager.h  gsd-a11y-settings-plugin.c  gsd-a11y-settings.service.in  gsd-a11y-settings.target.in  main.c  meson.build  org.gnome.SettingsDaemon.A11ySettings.desktop.in
plugins/account/: Makefile.am  gsd-account-manager.c  gsd-account-manager.h  main.c  meson.build  org.freedesktop.Accounts.User.c  org.freedesktop.Accounts.User.h  org.freedesktop.Accounts.User.xml  org.freedesktop.Accounts.c  org.freedesktop.Accounts.h  org.freedesktop.Accounts.xml  org.gnome.SettingsDaemon.Account.desktop  org.gnome.SettingsDaemon.Account.desktop.in
plugins/automount/: Makefile.am  automount.gnome-settings-plugin.in  gnome-fallback-mount-helper.c  gnome-fallback-mount-helper.desktop.in.in  gsd-automount-manager.c  gsd-automount-manager.h  gsd-automount-plugin.c  gsd-automount-plugin.h  gsd-autorun.c  nautilus-autorun.c  nautilus-autorun.h  nautilus-open-with-dialog.c  nautilus-open-with-dialog.h  test-automount.c
plugins/background/: Makefile.am  gsd-background-manager.c  gsd-background-manager.h  gsd-background-plugin.c  test-background.c
plugins/clipboard/: Makefile.am  clipboard.gnome-settings-plugin.in  gsd-clipboard-manager.c  gsd-clipboard-manager.h  gsd-clipboard-plugin.c  gsd-clipboard.service.in  gsd-clipboard.target.in  main.c  meson.build  org.gnome.SettingsDaemon.Clipboard.desktop.in  test-clipboard.c
plugins/color/: Makefile.am  color.gnome-settings-plugin.in  gcm-dmi.c  gcm-edid.c  gcm-edid.h  gcm-profile-store.c  gcm-self-test.c  gcm-tables.c  gcm-tables.h  gsd-color-calibrate.c  gsd-color-calibrate.h  gsd-color-manager.c  gsd-color-manager.h  gsd-color-plugin.c  gsd-color-profiles.c  gsd-color-profiles.h  gsd-color-scheme.c  gsd-color-scheme.h  gsd-color-state.c  gsd-color-state.h  gsd-color-x11.c  gsd-color-x11.h  gsd-color.service.in  gsd-color.target.in  gsd-location-monitor.c  gsd-location-monitor.h  gsd-natural-light-common.c  gsd-natural-light-common.h  gsd-natural-light.c  gsd-natural-light.h  gsd-night-light-common.c  gsd-night-light-common.h  gsd-night-light.c  gsd-night-light.h  main.c  meson.build  org.gnome.SettingsDaemon.Color.desktop.in  test-color.c
plugins/color-scheme/: gsd-color-scheme-manager.c  gsd-color-scheme-manager.h  gsd-color-scheme-test.c  gsd-color-scheme.c  gsd-color-scheme.h  main.c  meson.build
plugins/common/: Makefile.am  Makefile.am.gresources  daemon-skeleton-gtk.h  daemon-skeleton.h  eggaccelerators.c  eggaccelerators.h  gsd-application.c  gsd-application.h  gsd-common-enums.c.in  gsd-common-enums.h.in  gsd-common-test.c  gsd-datetime-helper.c  gsd-datetime-helper.h  gsd-device-manager-udev.c  gsd-device-manager-x11.c  gsd-device-manager.c  gsd-keygrab.c  (+19 more)
src/: Makefile.am  gnome-settings-manager.c  gnome-settings-manager.h  gnome-settings-plugins-engine.c  gnome-settings-plugins-engine.h  main.c
(+723 files in other folders)
