NULL =

SUBDIRS = 			\
	gnome-settings-daemon	\
	plugins			\
	data			\
	po 			\
	$(NULL)

EXTRA_DIST = \
	MAINTAINERS		\
	ChangeLog		\
	README			\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	$(NULL)

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update		\
	$(NULL)
